Archive2/35/b3e1d867a155f5/output
main.cpp:6:39: error: multiple types in one declaration
 class A class B : public X, public Y {};        
                                       ^
